--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -18,40 +18,29 @@
 				{% endfor %}
 			</ul>
 			<ul class="navbar-nav">
-				{# {% if app.user %}
-					{% if is_granted('ROLE_ADMIN') %}
-						<li class="nav-item">
-							<a href="{{ path('admin') }}" class="nav-link">Administration</a>
-						</li>
-					{% endif %}
-					<div class="btn-group">
-						<button class="dropdown-toggle btn-dropdown-user" type="button" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
-							<div class="sc-gravatar">
-								{% if app.user.avatar.imageName is defined and app.user.avatar.imageName != null %}
-									<img src="{{ vich_uploader_asset(app.user.avatar, 'imageFile') }}" class="sc-img-gravatar">
-								{% else %}
-									<img src="{{ gravatar('sbouret@discommentondit.fr') }}" class="sc-img-gravatar"/>
-								{% endif %}
-							</div>
-						</button>
-						<ul class="dropdown-menu dropdown-menu-lg-end py-0">
-							<li class="py-2 px-2">
-								<a class="dropdown-item dropdown-user" href="{{path('profile_edit')}}">Paramètres</a>
-							</li>
-							<li class="py-2 px-2">
-								<a class="dropdown-item dropdown-user" href="{{path('booking_index')}}">Voyages</a>
-							</li>
-							<div class="space-between"></div>
-							<li class="py-2 px-2">
-								<a class="dropdown-item dropdown-user color-btn-logout" href="{{ path('security_logout') }}">Se déconnecter</a>
-							</li>
-						</ul>
-					</div>
+				{# <li class="nav-item">
+					<a href="{{ path('cart_show') }}" class="nav-link">
+						<i class="fas fa-shopping-cart"></i>
+						Panier ({{ cartService.total | amount }})
+					</a>
+				</li> #}
+				{% if app.user %}
+									{# {% if is_granted('ROLE_ADMIN') %}
+											<li class="nav-item">
+												<a href="{{ path('admin') }}" class="nav-link">Administration</a>
+											</li>
+										{% endif %} #}
+					{# <li class="nav-item">
+						<a href="{{ path('purchase_index') }}" class="nav-link">Mes commandes</a>
+					</li> #}
+					<li class="nav-item">
+						<a href="{{ path('security_logout') }}" class="btn btn-danger">Se déconnecter</a>
+					</li>
 				{% else %}
 					<li class="nav-item">
-						<a href="{{ path('security_login') }}" class="btn btn-primary">Se connecter</a>
+						<a href="{{ path('security_login') }}" class="btn btn-success">Se connecter</a>
 					</li>
-				{% endif %} #}
+				{% endif %}
 			</ul>
 		</div>
 	</div>
