Mise en place de l'enregistrement du User

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -33,7 +33,7 @@
 					<button class="btn btn-md btn-dark" type="submit">
 						<span>Se connecter</span>
 					</button>
-					{# <a href="{{ path('registration_register') }}" class="btn btn-link">Je n'ai pas encore de compte !</a> #}
+					<a href="{{ path('registration_register') }}" class="btn btn-link">Je n'ai pas encore de compte !</a>
 					<div class="row mt-3">
 						<div class="checkbox col-md-6 text-start">
 							<label>
