Mise en place du mot de passe oublié

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -47,7 +47,7 @@
 					<span class="text-muted">
 						Vous avez oublié votre mot de passe&nbsp;?
 						<u>
-							{# <a href="{{ path('security_forgotPw') }}" class="text-decoration-none">Le réinitialiser</a> #}
+							<a href="{{ path('security_forgotPw') }}" class="text-decoration-none">Le réinitialiser</a>
 						</u>
 					</span>
 				</div>
