--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -18,12 +18,12 @@
 				{% endfor %}
 			</ul>
 			<ul class="navbar-nav">
-				{# <li class="nav-item">
+				<li class="nav-item">
 					<a href="{{ path('cart_show') }}" class="nav-link">
 						<i class="fas fa-shopping-cart"></i>
 						Panier ({{ cartService.total | amount }})
 					</a>
-				</li> #}
+				</li>
 				{% if app.user %}
 									{# {% if is_granted('ROLE_ADMIN') %}
 											<li class="nav-item">
