--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -30,9 +30,9 @@
 												<a href="{{ path('admin') }}" class="nav-link">Administration</a>
 											</li>
 										{% endif %} #}
-					{# <li class="nav-item">
+					<li class="nav-item">
 						<a href="{{ path('purchase_index') }}" class="nav-link">Mes commandes</a>
-					</li> #}
+					</li>
 					<li class="nav-item">
 						<a href="{{ path('security_logout') }}" class="btn btn-danger">Se déconnecter</a>
 					</li>
