--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,22 +14,28 @@
 	</div>
 	<hr>
 	<h2>Un service irréprochable</h2>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti assumenda optio dolor unde quis odio?</p>
+	<p>Services :
+Impression : Nous proposons des services d’impression de haute qualité. Que ce soit pour des cartes de visite, des affiches ou des brochures, nous mettons en valeur vos idées avec des finitions impeccables.
+Façonnage : Notre équipe maîtrise l’art du façonnage. Découpe, pliage, reliure… Nous transformons vos projets imprimés en pièces uniques.
+Conseils personnalisés : Vous avez une idée en tête ? Nous sommes là pour vous guider et vous conseiller. Notre graphiste expérimenté saura traduire vos concepts en visuels percutants.
+À Propos : Découvrez notre histoire, notre passion pour l’art et notre engagement envers la créativité. Rencontrez notre équipe et apprenez ce qui nous inspire au quotidien.
+Contact : Prêt à collaborer ? inscrivez-vous sur notre site. Nous sommes impatients de travailler avec vous !
+</p>
 	<div class="row">
 		{% include "partials/_assurance.html.twig" with {
             'color': 'primary',
             'icone': 'fas fa-truck',
-            'text': 'Lorem ipsum dolor sit amet consectetur adipisicing elit. Id laudantium voluptatum pariatur quisquam, a incidunt?'
+            'text': 'livraison au bout de 7 jours '
         } %}
 		{% include "partials/_assurance.html.twig" with {
             'color': 'success',
             'icone': 'fas fa-check',
-            'text': 'Lorem ipsum dolor sit amet consectetur adipisicing elit. Id laudantium voluptatum pariatur quisquam, a incidunt?'
+            'text': 'Une fois la commande effectuée, vous recevrez une confirmation par e-mail.'
         } %}
 		{% include "partials/_assurance.html.twig" with {
             'color': 'warning',
             'icone': 'fas fa-lock',
-            'text': 'Lorem ipsum dolor sit amet consectetur adipisicing elit. Id laudantium voluptatum pariatur quisquam, a incidunt?'
+            'text': 'Paiement sécurisé'
         } %}
 	</div>
 {% endblock %}
