--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-light" data-bs-theme="light">
 	<div class="container-fluid">
+	<a class="navbar-brand"   href="{{ path('homepage') }}">  <img src="{{ asset('assets/img/logo-img.png')}}" width= "80px"> </a> 
 		<a class="navbar-brand" href="/">SymPrinting</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -45,3 +46,4 @@
 		</div>
 	</div>
 </nav>
+ 
