--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -35,6 +35,9 @@
 						<a href="{{ path('purchase_index') }}" class="nav-link">Mes commandes</a>
 					</li>
 					<li class="nav-item">
+						<a href="{{ path('profile_edit') }}" class="nav-link">Mon profil</a>
+					</li>
+					<li class="nav-item">
 						<a href="{{ path('security_logout') }}" class="btn btn-danger">Se déconnecter</a>
 					</li>
 				{% else %}
